# sailfish-utilities

./: .gitignore  CMakeLists.txt  CONTRIBUTING.org  LICENSE  LICENSE.LGPL  README.org  harbour.changes  main.cpp  sailfish-tiny-tools.desktop  sailfish-utilities.pro  utilities.json  utilities.json.in  x-sailfish.sailfish-utilities.info.conf
plugin/: ActionItem.qml  CMakeLists.txt  plugin.cpp  utiltools.cpp  utiltools.h
qml/: ActionItem.qml  ActionList.qml  CMakeLists.txt  DemoItems.qml  Main.qml  MainPage.qml  SettingsTranslations.qml  tools.js
qml/plugins/: CMakeLists.txt  CleanBackup.qml  CleanLocalsearch.qml  CleanPackageCache.qml  CleanTracker.qml  ResetAlien.qml  RestartAndroid.qml  RestartAudio.qml  RestartBluetooth.qml  RestartDevice.qml  RestartFingerprint.qml  RestartKeyboard.qml  RestartNetwork.qml  RestartOfono.qml  RestartUI.qml  StopAndroid.qml
rpm/: sailfish-tiny-tools.spec  sailfish-utilities.spec
sailfishapplication/: sailfishapplication.cpp  sailfishapplication.h
tools/: CMakeLists.txt  config.hpp.in  localsearch-reindex.service.in  localsearch_reindex.sh  repair_rpm_db  repair_rpm_db.c.in  repair_rpm_db.sh  reset_aliendalvik.sh  restart_bluetooth.sh  restart_fingerprint.sh  restart_lipstick.sh  restart_network.sh  restart_ofono.sh  sailfish_tools_system_action.cpp  tracker-reindex.service.in  tracker_reindex.sh
